# nancy-ecommerce

./: README.md  app.py  pyproject.toml  render.yaml
ecommerce_sexshop/: index.js  package-lock.json  package.json  requeriments.txt
ecommerce_sexshop/backend/: app.py  product.db
ecommerce_sexshop/frontend/: cart.html  index.html  orders.html
ecommerce_sexshop/frontend/css/: styles.css  styles.css.css
ecommerce_sexshop/frontend/js/: carousel.js  cart.js  header.js  orders.js  product-detail.js  script.js
