[tool.poetry]
name = "nancy"
version = "0.1.0"
description = "Aplicación Flask lista para Render"
authors = ["Tu Nombre <tu@email.com>"]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^2.3.3"
flask_sqlalchemy = "^3.1.1"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
